# dbd_icon_tracker

./: .gitignore  LICENSE  README  README.md  bot.py  capture.py  config.py  config.toml  dbdhudtracker.py  debug.py  hud_tracker.py  main.py  pyproject.toml  requirements.txt  tracker.py  ui.py  vision.py
config/: coordinates.toml  icons.toml
dbd_icon_tracker/: __init__.py  capture.py  config.py  debug.py  hud_tracker.py  tracker.py  vision.py
